k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safety-backend-api
spec:
  type: ClusterIP
  selector:
    app: safety-backend-api
  ports:
    - name: http
      port: 80
      targetPort: 4000
